<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="in.nakkalites.mediaclient.viewmodel.profile.ProfileEditVm" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/Toolbar"
                app:title="@string/edit" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_900_2"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/your_name"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:appendStarSuperScript="@{true}"
                        tools:text="@string/your_name" />

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/bg_edittext"
                        android:letterSpacing="0.06"
                        android:lineSpacingExtra="12sp"
                        android:textColor="@color/grey_900_2"
                        android:textSize="16sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/phone_number"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:appendStarSuperScript="@{true}"
                        tools:text="@string/phone_number" />

                    <EditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/bg_edittext"
                        android:letterSpacing="0.06"
                        android:lineSpacingExtra="12sp"
                        android:textColor="@color/grey_900_2"
                        android:textSize="16sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/email_id"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:appendStarSuperScript="@{true}"
                        tools:text="@string/email_id" />

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/bg_edittext"
                        android:letterSpacing="0.06"
                        android:lineSpacingExtra="12sp"
                        android:textColor="@color/grey_900_2"
                        android:textSize="16sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/gender"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/et_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/bg_edittext"
                        android:clickable="false"
                        android:drawableEnd="@drawable/ic_chevron_down"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:letterSpacing="0.06"
                        android:lineSpacingExtra="12sp"
                        android:onClick="@{() -> etGender.showDropDown()}"
                        android:textColor="@color/grey_900_2"
                        android:textSize="16sp"
                        app:drawableTint="@color/grey_900_2"
                        app:suggestions="@{vm.ageSuggestions}" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/dob"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/et_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/bg_edittext"
                        android:letterSpacing="0.06"
                        android:lineSpacingExtra="12sp"
                        android:textColor="@color/grey_900_2"
                        android:textSize="16sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/city"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/et_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/bg_edittext"
                        android:letterSpacing="0.06"
                        android:lineSpacingExtra="12sp"
                        android:textColor="@color/grey_900_2"
                        android:textSize="16sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/country"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/et_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/bg_edittext"
                        android:letterSpacing="0.06"
                        android:lineSpacingExtra="12sp"
                        android:textColor="@color/grey_900_2"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cta"
                style="@style/PrimarySolid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="28dp"
                android:padding="16dp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="19sp" />
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
