<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="in.nakkalites.mediaclient.view.home.UserProfileVm" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_900_2"
            android:orientation="vertical"
            android:paddingBottom="42dp"
            tools:context=".view.home.UserProfileFragment">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="72dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="53dp"
                    android:layout_height="53dp"
                    android:layout_marginRight="5dp"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Rounded"
                    app:srcCompat="@drawable/ic_user_profile" />

                <FrameLayout
                    android:id="@+id/prime_layout"
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:layout_gravity="bottom|end|right"
                    android:background="@drawable/bg_prime"
                    app:elevation="5dp">

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_star" />
                </FrameLayout>
                <FrameLayout
                    android:id="@+id/super_prime_layout"
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:layout_gravity="bottom|end|right"
                    android:background="@drawable/bg_super_prime"
                    app:elevation="5dp">

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_crown" />
                </FrameLayout>
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/inter_regular"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textColor="@color/white"
                android:textSize="21sp"
                tools:text="Pavan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/inter_regular"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textColor="@color/grey_400"
                android:textSize="17sp"
                tools:text="pavan@gmail.com" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/inter_regular"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textColor="@color/grey_400"
                android:textSize="17sp"
                tools:text="+91-9790708464" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/inter_medium"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/edit"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/bg_rounded_rect_grey_6dp"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingTop="18dp"
                android:paddingRight="25dp"
                android:paddingBottom="18dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|top"
                    android:lineSpacingExtra="11sp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:text="Watch Exclusive Premium Videos &amp; Web series for" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal|top"
                    android:lineSpacingExtra="11sp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:text="₹49 /month" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/blue_button"
                    android:fontFamily="@font/inter_bold"
                    android:gravity="center"
                    android:paddingLeft="16dp"
                    android:paddingTop="12dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="12dp"
                    android:text="@string/view_plans"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    tools:text="@string/view_plans" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:text="@string/manage_subscriptions"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:paddingLeft="16dp"
                android:paddingTop="12dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:text="@string/faqs"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:paddingLeft="16dp"
                android:paddingTop="12dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:text="@string/contact_us"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:paddingLeft="16dp"
                android:paddingTop="12dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:text="@string/invite_your_friends"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:paddingLeft="16dp"
                android:paddingTop="12dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:text="@string/terms_and_conditions"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:paddingLeft="16dp"
                android:paddingTop="12dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:text="@string/privacy_policy"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</layout>
